tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__BrewofLove-AAAAAAAAAAAAAAAAAAAGGg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1562,
  "prerequisites": [
    336
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Brew of Love is a throwable potion that causes farm animals and villagers to get their luvin' on. When used on animals the effect is the same as if all hit animals were fed and their breeding cooldown is reset.\n\nIn the case of villagers, two (or more) must be hit by the same brew.\n\nThe Brew of Love may be thrown at a group of two or more enthralled zombies (created with a Brew of Raising or enthralled with the Infernal Infusion power), which will cause pairs of them to produce a baby zombie. It will also cause them to become zombie villagers. Zombie villagers can be turned back to villagers either using the normal method, or by casting a Rite of Fertility.\n\nThe Brew of Love is created in a kettle using the recipe found in the book Witchcraft: Brews & Infusions. Into the pot, throw a Rose, a Golden Carrot, Whiff of Magic, a Lily Pad, a Water Artichoke Globe and Cocoa Beans.\n\nWear a Witches Hat (and/or robes) while brewing to get more brews than just three.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Brew of Love",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    336
  ],
  "rewards": [],
  "tasks": []
}
