tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__CauldronBubble-AAAAAAAAAAAAAAAAAAABTg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 334,
  "prerequisites": [
    1560,
    332
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The second thing you'll need is a cauldron. It is used to craft most of the basic items, like mutandis. It requires anointing paste, which you will need an MV mixer to make. It is made by placing a regular Cauldron in the world, and then using Anointing Paste on it.\n\nTo brew a potion, cast a ritual or create an item, the cauldron must first be filled with water. This can be achieved by using three buckets of water on it, pumping water into it using pipes, or by using a Dispenser containing a Brew of Endless Water.\n\nOnce a cauldron is full of water, it must boil. Lighting a fire beneath the cauldron is the only way for this to happen. Using a netherrack block will guarantee the fire does not go out, although if it does go out, it may be set to boil again without any consequences (unlike brewing in a Kettle!).\n\nWhen the water is boiling, ingredients may be added to the Cauldron (one after another), to create the desired effect. The book, Witches' Brews gives a complete overview of all ingredients and what they can do when added to a brew.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "...Cauldron Bubble",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1560,
    332
  ],
  "rewards": [],
  "tasks": []
}
