tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__CircleMagic-AAAAAAAAAAAAAAAAAAABUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 339,
  "prerequisites": [
    1571
  ],
  "properties": {
    "auto_claim": false,
    "desc": "For circle magic, you need... a circle, obviously. There are 4 types of chalk you can use, and you'll need all of them to proceed.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Circle Magic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1571
  ],
  "rewards": [],
  "tasks": []
}
