tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__DiamondVapor-AAAAAAAAAAAAAAAAAAAGJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1574,
  "prerequisites": [
    1573
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Diamond vapor is an ingredient made by distilling diamond in a distillery according to the recipe in the book, Witchcraft: Distilling, using a Diamond and Oil of Vitriol.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Diamond Vapor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1573
  ],
  "rewards": [],
  "tasks": []
}
